# bloomfilter_omp

./: BloomFilter.cpp  BloomFilter.h  BloomFilterPar.cpp  BloomFilterPar.h  CMakeLists.txt  EmailGenerator.cpp  EmailGenerator.h  MultiHashes.cpp  MultiHashes.h  main.cpp  plot_bf_results.py  test.csv  test.h
dataset/: emails_10000.txt  emails_100000.txt
dataset/emails/: emails_1000.txt  emails_10000.txt  emails_100000.txt
dataset/spam/: spam_1000000_100.txt  spam_100000_100.txt  spam_10000_100.txt  spam_1000_100.txt
results/: backupcsvopenmp.rar  generateplot.py  results.csv
results/csv/: filter.csv  setup.csv
results/final_results/Filter1/: filter.csv  setup.csv
results/final_results/Filter2/: filter.csv  setup.csv
src/bloomfilter/: BloomFilter.cpp  BloomFilter.h
src/emailgenerator/: EmailGenerator.cpp  EmailGenerator.h
src/multihashes/: MultiHashes.cpp  MultiHashes.h
